# openalpr

src/cmake_modules/: FindTesseract.cmake
src/openalpr/: CMakeLists.txt
